Update API endpoint and add home page template
