# docs/swagger.json
@@ -12,6 +12,30 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
+        "/": {
+            "get": {
+                "description": "Hello World.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "home"
+                ],
+                "summary": "Hello World.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api": {
             "get": {
                 "description": "Get all products",
